--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -2,3 +2,86 @@
 *{
     font-family: 'Inter';
 }
+
+:root {
+    --color-primary: #F9A80C;
+  }
+
+.welcome-section{
+    margin-top: 30px;
+    border: solid 3px var(--color-primary);
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+
+    padding: 25px;
+}
+
+.star-section{
+    display: flex;
+    gap: 20rem;
+    margin-top: 20px;
+    position: absolute;
+}
+
+
+.welcome-msg{
+    color: var(--color-primary);
+}
+
+.profile-name{
+    font-size: 48px;
+}
+
+.orders-section{
+    margin-top: 140px;
+    margin-left: 200px;
+    margin-right: 200px;
+
+    display: flex;
+    flex-direction: column;
+
+    height: 250px;
+}
+
+.order-title{
+    font-size: 20px;
+    color: var(--color-primary);
+    padding-bottom: 20px;
+}
+
+.order-icon{
+    border-top: solid 1px;
+    width: 23%;
+    display: flex;
+    gap: 3px;
+    padding-top: 2px;
+    font-size: 13px;
+}
+
+.orders{
+    border-bottom: solid 1px #000000;
+    padding-left: 20px;
+}
+
+.account-section{
+    margin-left: 200px;
+    margin-right: 200px;
+
+    display: flex;
+    flex-direction: column;
+
+    height: 250px;
+}
+
+.account-title{
+    font-size: 20px;
+    color: var(--color-primary);
+    padding-bottom: 20px;
+}
+
+.order-button{
+    border-top: solid 1px #000000;
+}
