--- a/public/css/accountDetails.css
+++ b/public/css/accountDetails.css
@@ -5,3 +5,75 @@ main{
     justify-content: center;
     margin-top: 50px;
 }
+
+
+.title-details{
+    font-weight: 500;
+    font-size: 48px;
+}
+
+.title-detail{
+    font-size: 16px;
+    border-bottom: solid 5px black;
+    padding-bottom: 4px;
+    margin-top: 20px;
+    padding-left: 20px;
+}
+
+.profile-pref{
+    display: flex;
+    flex-direction: column;
+}
+
+.formProfile{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.name-label{
+    margin-top: 10px;
+    margin-left: 5px;
+    font-size: 10px;
+    position: absolute;
+    
+}
+
+
+.formProfile input{
+    margin-top: 25px;
+    border: none;
+    border-bottom: 2px solid black;
+    outline: none;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+
+
+.formProfile input:focus{
+    border-bottom: 2px solid black;
+}
+
+.btn-detail{
+    width: 445px;
+    height: 39px;
+    color: #ffffff;
+    background-color: #F9A80C;
+
+    border: none;
+    font-weight: bold;
+    font-size: 14px;
+
+    margin-top: 40px;
+}
+
+.passWarning{
+    font-size: 12px;
+    font-weight: 600px;
+}
+
+.profile-email label{
+    font-weight: bold;
+    font-size: 10px;
+}
