--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,97 +3,114 @@
 
 
 body {
-    font-family: "Montserrat", sans-serif;
-  }
+  font-family: "Montserrat", sans-serif;
+}
+
 .header-top {
   background-color: #43ADDA;
-  padding: 10px 0; 
+  padding: 10px 0;
   font-size: 14px;
   color: #fff;
 }
-.searchbar {
-    border: 1px solid orange;
-    border-radius: 8px 0 0 8px;
-}
-.btn-search {
-    background-color: orange;
-    color: #000;
-    border: 1px solid orange;
-    margin-left: -5px;
-    border-radius: 0 8px 8px 0;
-    position: relative;
-    top: -1px;
-}
-.nav-link-uppercase {
-    text-transform: uppercase; 
-  }
-  .custom-nav-item {
-    font-size: 12px;
-    color: #000;
-    font-weight: 800;
-  }
-  .custom-nav-item .lancamentos {
-    background-color: transparent;
-    border: 1px solid #43ADDA;
-    border-radius: 8px;
-    color: #43ADDA;
-    font-weight: 600;
-  }
-  .custom-nav-item .ofertas {
-    background-color: orange;
-    border: 1px solid orange;
-    border-radius: 8px;
-    color: #fff;
-    font-weight: 600;
-  }
- 
-.custom-background {
-    background-color: #43ADDA;
-    padding: 10px;
-    border-radius: 5px; 
-    color: white;
-  }
-  .carousel-item img {
-    width: 100%;
-    height: auto;
-  }
-  .feature-circle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 80px;
-    height: 80px;
-    background-color: orange;
-    border-radius: 50%;
-    color: white;
-    font-size: 24px;
-    margin-right: 20px;
-  }
-  .feature-title {
-    color: #43ADDA;
-    font-size: 16px;
-    margin-bottom: 0;
-    font-weight: 500;
-  }
-  .feature-text {
-    font-size: 16px;
-    margin-bottom: 0;
-  }
-  .categories-menu .nav-link{
-    margin: 0 5px;
-  }
 
-  .btn-login, .btn-cart {
-    font-size: 12px;
-  }
-  .btn-login img, .btn-cart img{
-    width: 18px;
-    margin-right: 5px;
-  }
-  .feature-info {
-    width: 225px;
-  }
-  .carousel-control-next-icon,
+.searchbar {
+  border: 1px solid orange;
+  border-radius: 8px 0 0 8px;
+}
+
+.btn-search {
+  background-color: orange;
+  color: #000;
+  border: 1px solid orange;
+  margin-left: -5px;
+  border-radius: 0 8px 8px 0;
+  position: relative;
+  top: -1px;
+}
+
+.nav-link-uppercase {
+  text-transform: uppercase;
+}
+
+.custom-nav-item {
+  font-size: 12px;
+  color: #000;
+  font-weight: 800;
+}
+
+.custom-nav-item .lancamentos {
+  background-color: transparent;
+  border: 1px solid #43ADDA;
+  border-radius: 8px;
+  color: #43ADDA;
+  font-weight: 600;
+}
+
+.custom-nav-item .ofertas {
+  background-color: orange;
+  border: 1px solid orange;
+  border-radius: 8px;
+  color: #fff;
+  font-weight: 600;
+}
+
+.custom-background {
+  background-color: #43ADDA;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: auto;
+}
+
+.feature-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  background-color: orange;
+  border-radius: 50%;
+  color: white;
+  font-size: 24px;
+  margin-right: 20px;
+}
+
+.feature-title {
+  color: #43ADDA;
+  font-size: 16px;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+
+.feature-text {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+.categories-menu .nav-link {
+  margin: 0 5px;
+}
+
+.btn-login,
+.btn-cart {
+  font-size: 12px;
+}
+
+.btn-login img,
+.btn-cart img {
+  width: 18px;
+  margin-right: 5px;
+}
+
+.feature-info {
+  width: 225px;
+}
+
+.carousel-control-next-icon,
 .carousel-control-prev-icon {
   width: 3vw;
   height: 3vw;
@@ -103,27 +120,27 @@ body {
 /* RICARDO */
 
 /*Cards de Produto*/
-.product-card{
+.product-card {
   border: 2px solid #43ADDA;
   border-radius: 16px;
   max-height: 25rem;
-  min-height: 25rem;
+  min-height: 396px;
 }
 
 
-.add-to-cart-box{
+.add-to-cart-box {
   border: 3px solid #F9A80C;
   color: #F9A80C;
 }
 
-.card-img-resize{
+.card-img-resize {
   object-fit: contain;
   max-height: 130px !important;
 }
 
 /*Footer*/
 
-#news-and-promotions-banner{
+#news-and-promotions-banner {
   height: 280px;
   background: #43ADDA;
 }
@@ -133,11 +150,11 @@ body {
 }
 
 #social-midia-footer {
-  height: 330px; 
+  height: 330px;
   margin-top: 5rem;
 }
 
-.footer-column > h3{
+.footer-column>h3 {
   margin-bottom: 1em;
 }
 
@@ -150,7 +167,7 @@ body {
   height: fit-content;
 }
 
-.copyright-footer-icons-resize{
+.copyright-footer-icons-resize {
   object-fit: contain;
   width: 60px;
 }
@@ -176,19 +193,19 @@ body {
   grid-row: 1 / span 3;
 }
 
-.card-2{
+.card-2 {
   grid-column: 3/ span 4;
   grid-row: 2/ span 3;
 }
 
 
-.container img{
+.container img {
   max-height: 550px;
   margin-top: 5%;
 }
 
 .view-information {
- 
+
   background-color: white;
   grid-column: 7/11;
   grid-row: 2 / span 2;
@@ -206,20 +223,18 @@ body {
   display: flex;
 }
 
-#main-image{
+#main-image {
   max-width: 403px;
 }
 
 .thumbnail {
-  width: 100px; 
+  width: 100px;
   height: auto;
   margin: 0 5px;
   cursor: pointer;
 }
 
-
-/*Pesquisa de produto*/
-
+/* Pesquisa de produto */
 .filter-button {
   border: none;
   border-radius: 1rem;
@@ -228,6 +243,19 @@ body {
   color: white;
 }
 
-.shaft-icon{
+.shaft-icon {
   width: 15px;
+}
+
+#category-list {
+  max-height: 400px;
+}
+
+#filter-container {
+  width: 372px;
+  margin-top: 80px;
+}
+
+#filter-container input:hover {
+  cursor: pointer;
 }
