--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -99,6 +99,10 @@
 
     border-bottom: solid 1px black;
     padding-bottom: 20px;
+
+    color: #000000;
+    text-decoration: none;
+
 }
 
 .logout{
