Filtro de categoria e promoção feito

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -301,6 +301,6 @@ body {
   margin-top: 80px;
 }
 
-#filter-container input:hover {
+#promotion-checkbox-container input , label{
   cursor: pointer;
 }
