--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -53,7 +53,6 @@
 }
 
 .order-icon{
-    border-top: solid 1px;
     width: 23%;
     display: flex;
     gap: 3px;
@@ -65,6 +64,8 @@
     border-bottom: solid 1px #000000;
     padding-left: 20px;
     padding-bottom: 4px;
+    color: black;
+    text-decoration: none;
 }
 
 .account-section{
