--- a/public/css/orderList.css
+++ b/public/css/orderList.css
@@ -46,6 +46,7 @@ main{
     width: 80px;
     height: 50px;
     padding-left: 40px;
+    padding-bottom: 10px;
 
     grid-column: 1/4;
     grid-row-start: 3;
