--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -9,34 +9,47 @@
 
 .welcome-section{
     margin-top: 30px;
-    border: solid 3px var(--color-primary);
+    border-top: solid 1px;
 
+    height: 20vh;    
     display: flex;
-    flex-direction: column;
-
     align-items: center;
+    justify-content: center;
+    gap: 50px; 
 
-    padding: 25px;
 }
 
 .star-section{
-    display: flex;
-    gap: 20rem;
-    margin-top: 20px;
-    position: absolute;
+    flex: 0 0 auto;
 }
 
 
 .welcome-msg{
     color: var(--color-primary);
+    font-weight: bolder;
+    text-transform: uppercase;
+
+    display: flex;
+    justify-content: center;
+
+    font-size: .9rem;
+    margin: 0;
+    padding-bottom: 4px;
 }
 
 .profile-name{
-    font-size: 48px;
+    font-size: 1.5rem;
+
+    display: flex;
+    justify-content: center;
+
+    font-weight: bolder;
+    text-transform: uppercase;
+    margin: 0;
 }
 
 .orders-section{
-    margin-top: 140px;
+    margin-top: 5vh;
     margin-left: 200px;
     margin-right: 200px;
 
@@ -50,18 +63,14 @@
     font-size: 20px;
     color: var(--color-primary);
     padding-bottom: 20px;
+    border-bottom: solid 1px #c6c6c686;
 }
 
 .order-icon{
-    width: 23%;
-    display: flex;
-    gap: 3px;
-    padding-top: 5px;
     font-size: 13px;
 }
 
 .orders{
-    border-bottom: solid 1px #000000;
     padding-left: 20px;
     padding-bottom: 4px;
     color: black;
@@ -85,7 +94,7 @@
 }
 
 .order-button{
-    border-top: solid 1px #000000;
+    border-top: solid 1px #c6c6c686;
     padding-top: 30px;
     
     display: flex;
@@ -98,16 +107,25 @@
     display: flex;
     gap: 10rem;
 
-    border-bottom: solid 1px black;
-    padding-bottom: 20px;
-
     color: #000000;
     text-decoration: none;
+}
 
+.btn-order img{
+    width: 10px;
+}
+
+.btn-order:hover{
+    text-decoration: underline 2px;
 }
 
 .logout{
     color: black;
-    font-weight: bold;
-    margin-top: 20px;
+    text-decoration: none;
+    position: absolute;
+    margin-top: 60px;
+}
+
+.logout:hover{
+    text-decoration: underline 2px;
 }
