--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,9 +2,13 @@
     margin: 20px 100px 0px 100px;
   }
 
+
   .nav-item img{
       margin-left: 70px;
+      margin-bottom: 5px;
   }
+
+  
 
   .voltar-a-loja{
     color: #000000;
