--- a/public/css/accountDetails.css
+++ b/public/css/accountDetails.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+*{
+    font-family: 'Inter';
+}
+
 main{
     display: flex;
     flex-direction: column;
@@ -8,16 +13,15 @@ main{
 
 
 .title-details{
-    font-weight: 500;
-    font-size: 48px;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .title-detail{
     font-size: 16px;
-    border-bottom: solid 5px black;
+    border-bottom: solid 3px black;
     padding-bottom: 4px;
     margin-top: 20px;
-    padding-left: 20px;
 }
 
 .profile-pref{
@@ -32,7 +36,7 @@ main{
 }
 
 .name-label{
-    margin-top: 10px;
+    margin-top: 4px;
     margin-left: 5px;
     font-size: 10px;
     position: absolute;    
@@ -42,19 +46,22 @@ main{
 .formProfile input{
     margin-top: 25px;
     border: none;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #c6c6c686;
     outline: none;
-    font-weight: bold;
     font-size: 12px;
-
-    
 }
 
 
 
 .formProfile input:focus{
     border-bottom: 2px solid black;
+    font-weight: bold;
+    color: #0000009e;
+}
 
+.formProfile input:hover{
+    border-bottom: 2px solid black;
+    font-weight: bold;
     color: #0000009e;
 
 }
