adicionado mensagem alternativa para caso o user tenha pedidos, funcao para somar total de produtos e precos de pedido e pequenos ajustes

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -21,6 +21,7 @@
 
 .star-section{
     flex: 0 0 auto;
+    padding-bottom: 40px;
 }
 
 
@@ -75,6 +76,20 @@
     padding-bottom: 4px;
     color: black;
     text-decoration: none;
+}
+
+.viewOrders{
+    padding-left: 20px;
+    color: black;
+    text-decoration: none;
+}
+
+.noOrders{
+    padding-left: 20px;
+}
+
+.viewOrders:hover{
+    text-decoration: underline 2px;
 }
 
 .account-section{
