--- a/public/css/orderList.css
+++ b/public/css/orderList.css
@@ -10,6 +10,11 @@ main{
     margin-bottom: 40px;
 }
 
+.title-section h1{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 .order{
     border: solid 1px black;
     width: 536px;
@@ -37,9 +42,14 @@ main{
     font-size: 14px;
     font-weight: bold;
     padding-left: 50px;
+    color: #43ADDA;
 
     grid-column: 1/4;
     grid-row-start: 2;
+}
+
+.item-order:hover{
+    color: #2e799a;
 }
 
 .img-order{
@@ -98,5 +108,5 @@ main{
 
 
 footer{
-  margin-top: 30%;
+  margin-top: 10%;
 }
