--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,12 @@ a {
   border-radius: 8px 0 0 8px;
 }
 
+.searchbar:focus {
+  border: 1px solid orange;
+  outline: none;
+  box-shadow: 0 0 0px;
+}
+
 .btn-search {
   background-color: orange;
   color: #000;
