--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,7 +210,7 @@ a {
 }
 
 #social-midia-footer {
-  height: 330px;
+  height: 250px;
   margin-top: 5rem;
 }
 
@@ -223,7 +223,7 @@ a {
   width: 24px;
 }
 
-#copyright-footer {
+#coprighyt-footer {
   height: fit-content;
 }
 
