--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,6 +228,8 @@ a {
 
 /* TAFINHA */
 
+
+/* TAFINHA */
 body {
   background-color: white;
 }
@@ -235,35 +237,28 @@ body {
 .container.single-product {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   background-color: white;
   margin: auto;
-
 }
-
-.card-1 {
-  background-color: white;
-  grid-column: 1/ span 4;
-  grid-row: 1 / span 3;
-}
-
-.card-2 {
-  grid-column: 3/ span 4;
-  grid-row: 2/ span 3;
-}
-
 
 .container img {
-  max-height: 550px;
+  max-width: 100%;
+  height: auto;
   margin-top: 5%;
 }
 
-.view-information {
+.card-image {
+  grid-column: 2/ span 3;
+  grid-row: 1/ span 2;
+  margin-top: 35%;
+}
 
+.view-information {
   background-color: white;
   grid-column: 7/11;
-  grid-row: 2 / span 2;
-
+  grid-row: 1 / span 1;
+  margin-top: 25%;
 }
 
 .product-images {
@@ -272,13 +267,14 @@ body {
   align-items: start;
 }
 
-
 .thumbnail-carousel {
   display: flex;
 }
 
 #main-image {
-  max-width: 403px;
+  width: 135%; 
+  height: auto; 
+  max-width: none; 
 }
 
 .thumbnail {
@@ -286,6 +282,58 @@ body {
   height: auto;
   margin: 0 5px;
   cursor: pointer;
+}
+
+.quantity {
+  width: 150px;
+}
+
+.quantity input {
+  font-size: medium;
+  width: 50px;
+}
+
+.minus-btn,
+.plus-btn {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+#cookie-popup {
+  align-items: center;
+  text-align: left;
+  background-color: #ffffff; 
+  color: #000000;
+  max-width: 60%;
+  margin: 0 auto 20px auto; 
+  padding: 30px;
+  border-radius: 10px; 
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.accept-cookies-btn {
+  padding: 10px 20px; 
+  font-size: 17px; 
+}
+
+
+@media (max-width: 768px) {
+  #cookie-popup {
+    max-width: 90%; 
+    font-size: 14px; 
+  }
+  
+  /*fim da parte tafinha*/
+
+  .accept-cookies-btn {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
 }
 
 /* Pesquisa de produto */
