--- a/public/css/pedidos.css
+++ b/public/css/pedidos.css
@@ -78,3 +78,21 @@ button.pedido-btn:hover {
     background-color: #F9A80C;
     color: #fff;
 }
+.container-box-pedido-realizado{
+    background-color: #B4E8BD;
+    padding: 60px 60px;
+    border-radius: 16px;
+    margin-bottom: 20px;
+    color: #009549;
+}
+.container-box-pedido-realizado .info-box{
+    background-color: #009549;
+    color: #fff;
+    font-weight: bold;
+    display: inline-block;
+    padding: 20px 40px;
+    border-radius: 16px;
+}
+.container-box-pedido-realizado .info-box img{
+    margin-right: 15px;
+}
