--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 /*Imports*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poetsen+One&family=Reddit+Mono:wght@200..900&display=swap');
 
 body {
   font-family: "Montserrat", sans-serif;
@@ -8,6 +9,12 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.poetsen-one-regular {
+  font-family: "Poetsen One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .header-top {
