--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,11 +158,12 @@ a {
   color: white;
   border: 2px solid #F9A80C;
   transition: 0.2s;
+  border-radius: 7px;
 }
 
 .add-to-cart-box:hover {
   background-color: #ffffff;
-  border: 2px solid #F9A80C;
+  border: 7px solid solid transparent;
   color: #F9A80C;
   transition: 0.2s;
 }
@@ -227,29 +228,20 @@ a {
 }
 
 /* TAFINHA */
-
-
-/* TAFINHA */
 body {
   background-color: white;
 }
 
 .container.single-product {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(12, 1fr); /* Aumenta colunas */
+  grid-template-rows: repeat(1, 1fr);/* Aumenta linhas */
   background-color: white;
   margin: auto;
 }
 
-.container img {
-  max-width: 100%;
-  height: auto;
-  margin-top: 5%;
-}
-
 .card-image {
-  grid-column: 2/ span 3;
+  grid-column: 3/ span 3; 
   grid-row: 1/ span 2;
   margin-top: 35%;
 }
@@ -259,6 +251,15 @@ body {
   grid-column: 7/11;
   grid-row: 1 / span 1;
   margin-top: 25%;
+  max-width: 500px;
+}
+
+
+.card-image img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 5%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 .product-images {
@@ -267,26 +268,46 @@ body {
   align-items: start;
 }
 
+#main-image {
+  width: 500px;
+  height: 5 0px;
+  object-fit: cover; 
+}
+
+
 .thumbnail-carousel {
   display: flex;
 }
 
-#main-image {
-  width: 500px; /* Largura fixa desejada */
-  height: 5 0px; /* Altura fixa desejada */
-  object-fit: cover; /* Garante que a imagem preencha a área especificada */
-}
-
-
 .thumbnail {
-  width: 70px; /* Largura fixa */
-  height: 70px; /* Altura fixa */
+  width: 70px; 
+  height: 70px; 
   margin: 0 5px;
   cursor: pointer;
-  max-width: 100%; /* Tamanho máximo igual a largura fixa */
-  max-height: 100%; /* Tamanho máximo igual a altura fixa */
+  max-width: 100%; 
+  max-height: 100%; 
 }
 
+.btn-add-to-cart {
+  width: 100%;
+  padding: 15px;
+  font-size: 18px;
+  background-color: #FFA500; 
+  color: white; 
+  border: 2px solid transparent;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+  transition: 0.2s;
+}
+
+.btn-add-to-cart:hover {
+  background-color: white;
+  border-color: #FFA500;
+  color: #FFA500;
+  border-radius: 7px;
+  transition: 0.2s;
+}
 
 .quantity {
   width: 150px;
@@ -348,8 +369,6 @@ body {
   color: #6C757D;
   margin-top: 10px;
 }
-
-
 
  /*fim da parte tafinha*/
 
