--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,6 +372,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: white;
+  border: 2px solid #000;
 }
 
 .container.single-product {
