--- a/public/css/pedidos.css
+++ b/public/css/pedidos.css
@@ -119,7 +119,7 @@ label.opcao-pagamento {
 }
 .container-box-pedido-realizado{
     background-color: #B4E8BD;
-    padding: 60px 60px;
+    padding: 30px 20px;
     border-radius: 16px;
     margin-bottom: 20px;
     color: #009549;
@@ -129,7 +129,7 @@ label.opcao-pagamento {
     color: #fff;
     font-weight: bold;
     display: inline-block;
-    padding: 20px 40px;
+    padding: 10px 20px;
     border-radius: 16px;
 }
 .container-box-pedido-realizado .info-box img{
@@ -149,6 +149,9 @@ label.opcao-pagamento {
     color: #fff;
     text-decoration: none;
 }
+.step-item .step-label{
+    font-size: 14px;
+}
 .step-item:not(.selected):hover a .step-circle{
     background-color: #fff;
     color: #43ADDA;
@@ -161,12 +164,12 @@ label.opcao-pagamento {
     color: #43ADDA;
 }
 .step-circle {
-    font-size: 24px;
-    width: 62px;
-    height: 62px;
+    font-size: 20px;
+    width: 48px;
+    height: 48px;
     border: 2px solid #fff;
     border-radius: 50%;
-    padding-top: 8px;
+    padding-top: 6px;
     background-color: #43ADDA;
     transition: 0.2s;
 }
@@ -198,3 +201,35 @@ label.opcao-pagamento {
 .forma-de-pagamento-box label{
     font-weight: 600;
 }
+
+/* Small devices landscape phones, 576px and up */
+@media (min-width: 576px) { 
+    .step-circle {
+        font-size: 24px;
+        width: 62px;
+        height: 62px;
+        padding-top: 8px;
+    }
+    .step-item .step-label{
+        font-size: 16px;
+    }
+ }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    .container-box-pedido-realizado{
+        padding: 60px 60px;
+    }
+    .container-box-pedido-realizado .info-box{
+        padding: 20px 40px;
+    }
+ }
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {  }
