--- a/public/css/pedidos.css
+++ b/public/css/pedidos.css
@@ -24,7 +24,7 @@ body {
     margin: 0 !important;
     max-width: 35px;
     height: 30px;
-    padding-top: 5px;
+    padding: 0px;
 }
 .item-qtd-input, .plus-btn, .minus-btn {
     background-color: #F9A80C !important;
@@ -217,6 +217,9 @@ label.opcao-pagamento {
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
+    .item-qtd-input{
+        padding: 5px 12px 6px 12px;
+    }
     .container-box-pedido-realizado{
         padding: 60px 60px;
     }
