--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,10 @@ a {
   text-decoration: none;
 }
 
+.header-logo img{
+  height: 55px;
+}
+
 .poetsen-one-regular {
   font-family: "Poetsen One", sans-serif;
   font-weight: 400;
@@ -27,6 +31,7 @@ a {
 .searchbar {
   border: 1px solid orange;
   border-radius: 8px 0 0 8px;
+  max-width: 250px;
 }
 
 .searchbar:focus {
@@ -149,14 +154,16 @@ a {
 #qty-products-cart {
   color: white;
   position: absolute;
-  right: 8px;
+  top: -10px;
+  right: -9px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 26px;
-  height: 26px;
-  border-radius: 360px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
   padding: 8px;
+  font-size: 10px;
   background-color: #FFA500;
 }
 
@@ -658,13 +665,30 @@ label {
 @media (min-width: 576px) {  }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {  }
+@media (min-width: 768px) { 
+  .header-logo {
+    position: absolute;
+    top: -45px;
+  }
+  .header-logo img{
+    height: 91px;
+  }
+
+ }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {  }
 
 /* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {  }
+@media (min-width: 1200px) { 
+  .searchbar {
+    max-width: 300px;
+  }
+ }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {  }
+@media (min-width: 1400px) { 
+  .searchbar {
+    max-width: 545px;
+  } 
+}
