--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,12 +419,17 @@ body {
   overflow: hidden;
   border: 2px solid transparent;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 
 .main-image img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.main-image.zoomed img {
+  transform: scale(2);
 }
 
 .product-images {
@@ -451,6 +456,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   object-fit: contain;
 }
+
 
 .view-information {
   background-color: white;
