--- a/public/css/style.css
+++ b/public/css/style.css
@@ -439,16 +439,14 @@ body {
   align-items: center;
   margin-bottom: 20px;
   flex: 1;
-  min-width: 300px;
-  margin-right: 50px;
 }
 
 .main-image {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 450px;
-  height: 450px;
+  width: 320px;
+  height: 320px;
   overflow: hidden;
   border: 2px solid transparent;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -470,12 +468,6 @@ body {
   display: flex;
   flex-direction: column;
   align-self: flex-start;
-  margin-left: 50px;
-  height: 200px;
-}
-
-.thumbnail-carousel {
-  display: flex;
 }
 
 .thumbnail {
@@ -494,7 +486,6 @@ body {
 .view-information {
   background-color: white;
   max-width: 500px;
-  margin-left: 20px;
   flex: 1;
   min-width: 300px;
 }
@@ -690,7 +681,12 @@ label {
 
 
 /* Small devices landscape phones, 576px and up */
-@media (min-width: 576px) {  }
+@media (min-width: 576px) { 
+  .main-image {
+    width: 450px;
+    height: 450px;
+  }
+ }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
@@ -713,6 +709,9 @@ label {
 @media (min-width: 992px) { 
   .container-features {
     overflow-x: hidden;
+  }
+  .main-product {
+    min-width: 300px;
   }
  }
 
