--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,105 +3,120 @@
     font-family: 'Inter';
 }
     
-    main{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
+main{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 
+.loginOption {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+
+
+.loginOption button{
+    font-weight: 500;
+    background-color: inherit;
+
+    padding-left: 20px;
+    padding-right: 20px;
+
+    border-left: transparent;
+    border-right: transparent;
+    border-top: transparent;
+}
+
+.log{
+color: #43ADDA;
+border-bottom: #43ADDA solid 5px;
+
+}
+
+.salutation {
+
+    margin-top: 50px;
+    text-align: center; 
+}
+
+.salutation h2{
+    font-size: 24px;
+}
+
+
+.salutation p{
+    font-size: 20px;
+} 
+
+.formLogin form{
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    max-width: 550px;
+    width: 100%;
+}   
+
+.formLogin input{
+    border: none;
+    border-bottom: 2px solid black;
+    outline: none;
+}
+
+.formLogin input:focus{
+    border-bottom: 2px solid black;
+}
+
+
+.formLogin b{
+    color: #F9A80C;
+}
+
+
+
+.checkBox{
+    width: 20px;
+    flex: none;
+    vertical-align: middle;
+}
+
+.send{
+    color: #ffffff;
+    background-color: #F9A80C;
+
+    border-radius: 8px;
+    border: none;
+    padding: 8px 80px;
+
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* Small devices landscape phones, 576px and up */
+@media (min-width: 576px) { 
     .loginOption {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 90px;
         font-size: 26px;
     }
-
- 
-
     .loginOption button{
-        font-weight: 500;
-        background-color: inherit;
-
         padding-left: 50px;
         padding-right: 50px;
-
-        border-left: transparent;
-        border-right: transparent;
-        border-top: transparent;
     }
-
-   .log{
-    color: #43ADDA;
-    border-bottom: #43ADDA solid 5px;
-
-   }
-    
-   .salutation {
-
-      margin-top: 50px;
-      text-align: center; 
-    }
-
-    .salutation h2{
-        font-size: 24px;
-    }
-    
-
-    .salutation p{
-        font-size: 20px;
-    } 
-
-    .formLogin form{
-        margin-top: 40px;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        width: 550px;
-    }   
-
-    .formLogin input{
-        border: none;
-        border-bottom: 2px solid black;
-        outline: none;
-    }
-
-    .formLogin input:focus{
-        border-bottom: 2px solid black;
-    }
-
-
-
-    .formLogin b{
-        color: #F9A80C;
-    }
-
-    
-
-    .checkBox{
-        width: 20px;
-        flex: none;
-        vertical-align: middle;
-    }
-
     .send{
-        width: 431px;
-        height: 64px;
-        color: #ffffff;
-        background-color: #F9A80C;
-
-        border-radius: 8px;
-        border: none;
-
-        font-size: 20px;
-        font-weight: bold;
-
+        padding: 18px 180px;
     }
+ }
 
-    .sendMar{
-        margin-left: 45px;
-    }
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {  }
 
-    footer{
-      margin-top: 16%;
-    }
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {  }
