--- a/public/css/address.css
+++ b/public/css/address.css
@@ -2,25 +2,14 @@
     --text-color: #6A6868;
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    margin-left: 20%;    
-    margin-right: 20%;    
+.address-container {
+    max-width: 800px;
 }
 
 .welcome-section h1{
     font-size: 1.5rem;
     margin-top: 20px;
     font-weight: bold;
-}
-
-
-.address-save{
-    padding-right: 650px;
 }
 
 .address-save-title{
@@ -30,9 +19,7 @@ main{
 }
 
 .address-save .progress-bar{
-    position: absolute;
-
-    width: 800px;
+    width: 100%;
     height: 5px; 
     background-color: #F9A80C;   
 }
@@ -71,8 +58,7 @@ main{
 }
 
 .new-address{
-    margin: 40px 0px 40px 385px;
-    padding-right: 650px;
+    margin: 40px 0px;
 }
 
 .address-add-title{
@@ -80,41 +66,31 @@ main{
 }
 
 .new-address .progress-bar{
-    position: absolute;
-
-    width: 800px;
+    width: 100%;
     height: 5px; 
     background-color: #F9A80C;   
 }
 
 .updateAddress{
-    margin: 40px 0px 40px 385px;
-    padding-right: 650px;
+    margin: 40px 0px;
 }
 
 .updateAddress .progress-bar{
-    position: absolute;
-
-    width: 800px;
+    width: 100%;
     height: 5px; 
     background-color: #F9A80C;   
 }
 
 .address-form{
     margin-top: 40px;
-
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto  auto  auto auto;
-    grid-column-gap: 230px;
-    row-gap: 40px;
 }
 
 .address-form-item{
     border: none;
     border-bottom: 2px solid #6A6868;
     outline: none;
-    width: 200px;
+    margin-bottom: 40px;
+    width: 100%;
 }
 
 .address-form-item input:focus{
@@ -122,65 +98,22 @@ main{
     background-color: transparent;
 }
 
-.formName{
-    grid-column:  1/4;
-    grid-row-start: 1;
-}
-
-.formLog{
-    grid-column:  1/4;
-    grid-row-start: 2;
-}
-
-.formNumber{
-    grid-column:  2/4;
-    grid-row-start: 2;
-}
-
-.formCity{
-    grid-column:  3/4;
-    grid-row-start: 2;
-}
-
-.formEstate{
-    grid-column:  1/4;
-    grid-row-start: 3;
-}
-
-.formZipCode{
-    grid-column:  2/4;
-    grid-row-start: 3;
-}
-
-.formComplement{
-    grid-column:  3/4;
-    grid-row-start: 3;
-}
-
 .save-button{
-    grid-column:  1/4;
-    grid-row-start: 4;
-
     border: solid 1px #43ADDA;
     color: #43ADDA;
     background-color: transparent;
     font-weight: 700;
     font-size: 14px;
-
-    width: 190px;
-    height: 39px;
+    padding: 8px;
 }
 
 .cancel-button{
-    grid-column:  2/4;
-    grid-row-start: 4;
-
     font-size: 12px;
 
     background-color: transparent;
     border: none;
     text-decoration: underline;
-    width: 50px;
+    padding: 8px;
 }
 
 .marginBotao{
@@ -188,6 +121,21 @@ main{
     margin-top: 10px;
 }
 
-footer{
-  margin-top: 31%;
-}
+/* Small devices landscape phones, 576px and up */
+@media (min-width: 576px) { 
+    
+ }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    
+ }
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {  }
