--- a/public/css/orderList.css
+++ b/public/css/orderList.css
@@ -1,12 +1,6 @@
-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .title-section{
-    margin-top: 90px;
     margin-bottom: 40px;
 }
 
@@ -15,37 +9,27 @@ main{
     font-weight: bold;
 }
 
+.order-list-container {
+    max-width: 536px;
+}
+
 .order{
     border: solid 1px black;
-    width: 536px;
-    height: 170px;
-
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 40px  auto  auto auto;
-
     margin-bottom: 50px;
+    padding: 14px 24px 24px;
 }
 
 
 .status-order{
     font-size: 16px;
     font-weight: bold;
-    padding-left: 40px;
     padding-top: 10px;
-    
-    grid-column:  1/4;
-    grid-row-start: 1;
 }
 
 .item-order{
     font-size: 14px;
     font-weight: bold;
-    padding-left: 50px;
     color: #43ADDA;
-
-    grid-column: 1/4;
-    grid-row-start: 2;
 }
 
 .item-order:hover{
@@ -53,46 +37,28 @@ main{
 }
 
 .img-order{
-    width: 80px;
     height: 50px;
-    padding-left: 40px;
     padding-bottom: 10px;
-
-    grid-column: 1/4;
-    grid-row-start: 3;
 }
 
 .date-order{
     font-size: 10px;
     padding-top: 10px;
-
-    grid-column: 4/4;
-    grid-row-start: 1;
 }
 
 .order-unit{
     font-size: 10px;
     padding-top: 10px;
-
-    grid-column: 4/4;
-    grid-row-start: 2;
 }
 
 .order-price{
     font-size: 20px;
     font-weight: bold;
-
-    grid-column: 4/4;
-    grid-row-start: 3;  
 }
 
 .order .progress-bar{
-    position: absolute;
-    width: 490px;
+    width: 100%;
     height: 5px;    
-
-    margin-top: 7.5%;
-    margin-left: 1.3%;
 
     background-color: #F9A80C;
 
@@ -107,6 +73,21 @@ main{
 }
 
 
-footer{
-  margin-top: 10%;
+/* Small devices landscape phones, 576px and up */
+@media (min-width: 576px) { 
+    .order-unit{
+        margin-bottom: 35px;
+    } 
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {  }
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {  }
