fix filtragem de preço funcionando mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,11 @@ a {
   border: none;
 }
 
+header .dropdown ul.dropdown-menu {
+  inset: 0px 0px auto auto;
+  max-width: 210px;
+}
+
 .header-logo img{
   height: 55px;
 }
